app/src/test/resources/programs/invalid/foreign/same_name.exe
foreign foo get_zero() -> Int
foreign foo get_zero() -> Int

foo main() -> Int {
    get_zero() 
}